Fix SonarQube issues across controllers, configs, services, entities, and tests