@@ -1,6 +1,7 @@
 package portal.expenses.service;
 
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -35,7 +36,7 @@ public class UserService {
     public List<UserResponseDto> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(this::toUserResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserResponseDto createUser(UserCreateRequest request) {
@@ -44,7 +45,7 @@ public class UserService {
         user.setPassword(passwordEncoder.encode(request.password()));
         user.setName(request.name());
         user.setEmail(request.email());
-        Role role = roleRepository.findByName(request.role()).orElseThrow(() -> new RuntimeException("Role not found"));
+        Role role = roleRepository.findByName(request.role()).orElseThrow(() -> new NoSuchElementException("Role not found"));
         user.setRoles(Set.of(role));
         AppUser savedUser = userRepository.save(user);
         return toUserResponseDto(savedUser);
